--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=payment-service
+spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.uri=http://localhost:8888
